--- a/sfsw-proj.vcxproj.filters
+++ b/sfsw-proj.vcxproj.filters
@@ -95,6 +95,9 @@
     <ClInclude Include="inc\scenes\spring.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="inc\function.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\fs_basic.glsl" />
