--- a/sfsw-proj.vcxproj.filters
+++ b/sfsw-proj.vcxproj.filters
@@ -130,4 +130,7 @@
   <ItemGroup>
     <Font Include="opensans.ttf" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="functions.txt" />
+  </ItemGroup>
 </Project>
