--- a/sfsw-proj.vcxproj.filters
+++ b/sfsw-proj.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="src\cube.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\viewport.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\app.hpp">
@@ -120,6 +123,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="inc\cube.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\viewport.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
