add springs and spring rendering

--- a/sfsw-proj.vcxproj
+++ b/sfsw-proj.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="src\scenes\slerp.cpp" />
     <ClCompile Include="src\scenes\spring.cpp" />
     <ClCompile Include="src\scenes\top.cpp" />
+    <ClCompile Include="src\segments.cpp" />
     <ClCompile Include="src\shader.cpp" />
     <ClCompile Include="src\store.cpp" />
     <ClCompile Include="src\texture.cpp" />
@@ -188,6 +189,7 @@
     <ClInclude Include="inc\texture.hpp" />
     <ClInclude Include="inc\viewport.hpp" />
     <ClInclude Include="inc\window.hpp" />
+    <ClInclude Include="inc\segments.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\fs_basic.glsl" />
