add base scene for two segment ik demo

--- a/sfsw-proj.vcxproj
+++ b/sfsw-proj.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="src\mathparse.cpp" />
     <ClCompile Include="src\scamera.cpp" />
     <ClCompile Include="src\scenes\gel.cpp" />
+    <ClCompile Include="src\scenes\ik.cpp" />
     <ClCompile Include="src\scenes\slerp.cpp" />
     <ClCompile Include="src\scenes\spring.cpp" />
     <ClCompile Include="src\scenes\top.cpp" />
@@ -183,6 +184,7 @@
     <ClInclude Include="inc\scamera.hpp" />
     <ClInclude Include="inc\scene.hpp" />
     <ClInclude Include="inc\scenes\gel.hpp" />
+    <ClInclude Include="inc\scenes\ik.hpp" />
     <ClInclude Include="inc\scenes\slerp.hpp" />
     <ClInclude Include="inc\scenes\spring.hpp" />
     <ClInclude Include="inc\scenes\top.hpp" />
