--- a/sfsw-proj.vcxproj
+++ b/sfsw-proj.vcxproj
@@ -155,6 +155,8 @@
     <ClCompile Include="src\gui.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\mathparse.cpp" />
+    <ClCompile Include="src\mesh.cpp" />
+    <ClCompile Include="src\beziermodel.cpp" />
     <ClCompile Include="src\plane.cpp" />
     <ClCompile Include="src\scamera.cpp" />
     <ClCompile Include="src\scenes\gel.cpp" />
@@ -182,6 +184,8 @@
     <ClInclude Include="inc\grid.hpp" />
     <ClInclude Include="inc\gui.hpp" />
     <ClInclude Include="inc\mathparse.hpp" />
+    <ClInclude Include="inc\mesh.hpp" />
+    <ClInclude Include="inc\beziermodel.hpp" />
     <ClInclude Include="inc\plane.hpp" />
     <ClInclude Include="inc\scamera.hpp" />
     <ClInclude Include="inc\scene.hpp" />
@@ -199,6 +203,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\fs_basic.glsl" />
+    <None Include="shaders\fs_beziermodel.glsl" />
     <None Include="shaders\fs_billboard.glsl" />
     <None Include="shaders\fs_gelcube.glsl" />
     <None Include="shaders\fs_grid_xy.glsl" />
@@ -213,6 +218,7 @@
     <None Include="shaders\tes_gelcube.glsl" />
     <None Include="shaders\vs_basic.glsl" />
     <None Include="shaders\vs_basic_tex.glsl" />
+    <None Include="shaders\vs_beziermodel.glsl" />
     <None Include="shaders\vs_billboard.glsl" />
     <None Include="shaders\vs_billboard_s.glsl" />
     <None Include="shaders\vs_grid.glsl" />
@@ -227,6 +233,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="functions.txt" />
+    <Text Include="meshes\duck.txt" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="textures\slime_albedo.png" />
