create basic two viewport scene for puma ik

--- a/sfsw-proj.vcxproj
+++ b/sfsw-proj.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="src\scamera.cpp" />
     <ClCompile Include="src\scenes\gel.cpp" />
     <ClCompile Include="src\scenes\ik.cpp" />
+    <ClCompile Include="src\scenes\puma.cpp" />
     <ClCompile Include="src\scenes\slerp.cpp" />
     <ClCompile Include="src\scenes\spring.cpp" />
     <ClCompile Include="src\scenes\top.cpp" />
@@ -191,6 +192,7 @@
     <ClInclude Include="inc\scene.hpp" />
     <ClInclude Include="inc\scenes\gel.hpp" />
     <ClInclude Include="inc\scenes\ik.hpp" />
+    <ClInclude Include="inc\scenes\puma.hpp" />
     <ClInclude Include="inc\scenes\slerp.hpp" />
     <ClInclude Include="inc\scenes\spring.hpp" />
     <ClInclude Include="inc\scenes\top.hpp" />
