--- a/sfsw-proj.vcxproj
+++ b/sfsw-proj.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="src\mathparse.cpp" />
     <ClCompile Include="src\mesh.cpp" />
     <ClCompile Include="src\beziermodel.cpp" />
+    <ClCompile Include="src\model.cpp" />
     <ClCompile Include="src\plane.cpp" />
     <ClCompile Include="src\scamera.cpp" />
     <ClCompile Include="src\scenes\gel.cpp" />
@@ -187,6 +188,7 @@
     <ClInclude Include="inc\mathparse.hpp" />
     <ClInclude Include="inc\mesh.hpp" />
     <ClInclude Include="inc\beziermodel.hpp" />
+    <ClInclude Include="inc\model.hpp" />
     <ClInclude Include="inc\plane.hpp" />
     <ClInclude Include="inc\scamera.hpp" />
     <ClInclude Include="inc\scene.hpp" />
