add time series plotting to the flywheel scene

--- a/sfsw-proj.vcxproj.filters
+++ b/sfsw-proj.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="src\model.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\scenes\flywheel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\app.hpp">
@@ -192,6 +195,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="inc\model.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\scenes\flywheel.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
