--- a/sfsw-proj.vcxproj
+++ b/sfsw-proj.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="src\model.cpp" />
     <ClCompile Include="src\plane.cpp" />
     <ClCompile Include="src\scamera.cpp" />
+    <ClCompile Include="src\scenes\flywheel.cpp" />
     <ClCompile Include="src\scenes\gel.cpp" />
     <ClCompile Include="src\scenes\ik.cpp" />
     <ClCompile Include="src\scenes\puma.cpp" />
@@ -192,6 +193,7 @@
     <ClInclude Include="inc\plane.hpp" />
     <ClInclude Include="inc\scamera.hpp" />
     <ClInclude Include="inc\scene.hpp" />
+    <ClInclude Include="inc\scenes\flywheel.hpp" />
     <ClInclude Include="inc\scenes\gel.hpp" />
     <ClInclude Include="inc\scenes\ik.hpp" />
     <ClInclude Include="inc\scenes\puma.hpp" />
